// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser should postprocess elements allow modify element metadata 1`] = `
Object {
  "attributes": Object {
    "contenteditable": Array [
      "",
      "true",
      "false",
    ],
    "dir": Array [
      "ltr",
      "rtl",
      "auto",
    ],
    "draggable": Array [
      "true",
      "false",
    ],
    "hidden": Array [],
    "id": Array [
      /\\^\\\\S\\+\\$/,
    ],
    "tabindex": Array [
      /-\\?\\\\d\\+/,
    ],
  },
  "deprecatedAttributes": Array [
    "contextmenu",
  ],
  "flow": true,
  "permittedContent": Array [
    "@flow",
    "dt",
    "dd",
  ],
  "tagName": "i",
}
`;

exports[`parser should postprocess elements allow modify element metadata 2`] = `
Object {
  "attributes": Object {
    "contenteditable": Array [
      "",
      "true",
      "false",
    ],
    "dir": Array [
      "ltr",
      "rtl",
      "auto",
    ],
    "draggable": Array [
      "true",
      "false",
    ],
    "hidden": Array [],
    "id": Array [
      /\\^\\\\S\\+\\$/,
    ],
    "tabindex": Array [
      /-\\?\\\\d\\+/,
    ],
  },
  "deprecatedAttributes": Array [
    "contextmenu",
  ],
  "flow": true,
  "permittedContent": Array [
    "@phrasing",
  ],
  "phrasing": true,
  "tagName": "u",
}
`;
